--- a/css/index.css
+++ b/css/index.css
@@ -1,14 +1,46 @@
 
 header{
+    display: flex;
+    justify-content: space-between;
     background-color: #7C5E99;
+    border-bottom:10px solid black;
+    padding: 10px 20px;
+    image-resolution:;
+    
+}
+nav{
+    text-align:right;
+
 }
 
 a {
+    display: inline-flex;
+    align-items: center;
     color: #FFFFFF;
     font-size: 20px;
-    font-family: "Fira Code", "Arial", Helvatica, sans-serif;
+    font-family:'Fira Code', monospace, sans-serif;
     font-weight: 500;
     text-decoration: none;
     margin-right: 30px;
-
 }
+
+a:before{
+    content: "";
+    display: inline-block;
+    background-color: #F25A70;
+    width: 10px;
+    height: 10px;
+    margin-right: 10px;
+    vertical-align: middle;
+}
+
+#button {
+    display: inline-block;
+    background-color: #F25A70;
+    height: 30px;
+    line-height: 30px;
+    box-shadow: 5px 5px 0 black;
+    padding: 18px 20px;
+    margin-right: 0;
+}
+
