--- a/css/index.css
+++ b/css/index.css
@@ -10,7 +10,7 @@ header{
 
 h1{
 display: inline-flex;
-font-family: 'Press Start 2P';
+font-family: 'Press Start 2P', sans-serif;
 color: #fff;
 text-shadow: 5px 5px 0px #000;
 align-items: center;
@@ -31,6 +31,7 @@ a {
     font-weight: 500;
     text-decoration: none;
     margin-right: 30px;
+   
 }
 
 a:before{
@@ -46,12 +47,19 @@ a:before{
 #button {
     display: inline-block;
     background-color: #F25A70;
-    height: 30px;
-    line-height: 30px;
     box-shadow: 5px 5px 0 black;
     padding: 18px 20px;
     margin-right: 0;
     cursor: pointer;
+    transition: transform 100ms linear;
+}
+
+#button:hover{
+    transform: scale(1.1);
+    opacity: 0.5;
+}
+#button::before{
+    content: none;
 }
 
 
